--- a/blogpost.html
+++ b/blogpost.html
@@ -4,7 +4,12 @@
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <div id="container">
+            <div id="post">
+            <h1>Este es un título bien interesante</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam nostrum dolorum aut placeat numquam. Explicabo in tempore, sapiente eveniet vel cum. Et, sapiente rem iure nulla nobis eos? Dolorem, necessitatibus.</p>
+        </div>
+        </div>
+        
     </body>
 </html>
