--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div>
+                <h2>Cabecera</h2>
+            </div>
             <div id="post">
             <h1>Este es un título bien interesante</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam nostrum dolorum aut placeat numquam. Explicabo in tempore, sapiente eveniet vel cum. Et, sapiente rem iure nulla nobis eos? Dolorem, necessitatibus.</p>
