Finalizada la cabecera con fondo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,8 +5,9 @@
     </head>
     <body>
         <div id="container">
-            <div>
-                <h2>Cabecera</h2>
+            <div id="cabecera">
+                Hyperblog
+                <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
             <h1>Este es un título bien interesante</h1>
