--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,7 @@
             <div id="post">
             <h1>Este es un título bien interesante</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam nostrum dolorum aut placeat numquam. Explicabo in tempore, sapiente eveniet vel cum. Et, sapiente rem iure nulla nobis eos? Dolorem, necessitatibus.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam eum laboriosam, quis, officia quibusdam maxime nihil natus deleniti vero aspernatur commodi, incidunt rerum excepturi quisquam. At adipisci harum dicta. Adipisci?</p>
         </div>
         </div>
         
