Modifiqué imágen, color fondo y header

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,6 +6,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
+                <img id="logo" src="imagen/gatito-tierno-hermoso-png-transparente.png" alt="logo cabecera"/>
                 Hyperblog
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
