--- a/blogpost.html
+++ b/blogpost.html
@@ -17,6 +17,7 @@
                 <p>Suscribete y dale like</p>
         
         </div>
+        <div id="footer">Hecho con amor por Zulyma Jeschke</div>
         </div>
         
     </body>
