Tildes y Typos arregados

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,14 +8,14 @@
             <div id="cabecera">
                 <img id="logo" src="imagen/gatito-tierno-hermoso-png-transparente.png" alt="logo cabecera"/>
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">Tu Blog de Cabecera</span>
             </div>
             <div id="post">
             <h1>Este es un título bien interesante</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam nostrum dolorum aut placeat numquam. Explicabo in tempore, sapiente eveniet vel cum. Et, sapiente rem iure nulla nobis eos? Dolorem, necessitatibus.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam eum laboriosam, quis, officia quibusdam maxime nihil natus deleniti vero aspernatur commodi, incidunt rerum excepturi quisquam. At adipisci harum dicta. Adipisci?</p>
-                <p>Por fin creo haber solucionado</p>
-                <p>Suscribete y dale like</p>
+                <p>Por fin creo haber Solucionado</p>
+                <p>Suscríbete y dale like</p>
         
         </div>
         <div id="footer">Hecho con amor por Zulyma Jeschke</div>
